--- a/client/src/app/auth/registrationlayout.css
+++ b/client/src/app/auth/registrationlayout.css
@@ -52,3 +52,37 @@
   font-weight: 700;
   text-align: center;
 }
+
+/* Extra Small Devices (Phones) */
+@media (max-width: 576px) {
+  .reg-position {
+    width: 95%;
+    margin: auto;
+  }
+  .reg-content {
+    padding: 4em 0;
+  }
+}
+
+/* Small Devices (Tablets) */
+@media (min-width: 577px) and (max-width: 768px) {
+  .reg-position {
+    width: 80%;
+    margin: auto;
+  }
+  .reg-content {
+    padding: 3em 1em;
+  }
+}
+
+/* Medium Devices (Tablets in Landscape, Small Laptops) */
+@media (min-width: 769px) and (max-width: 992px) {
+}
+
+/* Large Devices (Desktops) */
+@media (min-width: 993px) and (max-width: 1200px) {
+}
+
+/* Extra Large Devices (Large Desktops) */
+@media (min-width: 1201px) {
+}
