--- a/client/src/app/css/home.css
+++ b/client/src/app/css/home.css
@@ -1,6 +1,3 @@
-main {
-  width: 50em;
-}
 .home-main {
   width: 63%;
   margin: auto;
@@ -784,18 +781,12 @@ input[type="date"] {
   top: 18%;
 }
 @media (max-width: 420px) {
-  main {
-    width: 20em !important;
-  }
   .hsss-fot-leftimg {
     left: 12% !important;
   }
 }
 /* Extra Small Devices (Phones) */
 @media (max-width: 576px) {
-  main {
-    width: 25em;
-  }
   .home-reminders {
     padding: 0;
     margin: 0;
@@ -812,6 +803,14 @@ input[type="date"] {
   }
   .horetextone {
     text-align: center;
+  }
+  .home-hero-games,
+  .home-heros {
+    padding: 0;
+  }
+  .home-hero-bancontent {
+    width: 95%;
+    margin: auto;
   }
   .home-hero-gcontents {
     height: fit-content;
@@ -884,10 +883,15 @@ input[type="date"] {
   .home-sectionsix {
     width: 90%;
     margin: auto;
+    height: fit-content;
   }
+  
   .hsss-fot-leftimg {
     left: 18%;
     top: 8%;
+  }
+  .home-secsix-cont h2 {
+    font-size: 35px;
   }
   .home-secsix-cont h2,
   .home-secsix-cont p {
@@ -912,8 +916,19 @@ input[type="date"] {
   .home-secsix-sub p {
     top: 5%;
   }
+  .home-all-gmenu {
+    height: fit-content;
+    padding: 12px;
+  }
   .home-all-games {
-    padding-left: 0px;
+    padding-left: 0;
+    margin-left: 0;
+  }
+
+  .home-all-gmenu ul {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
   }
   .hagmel-m-each {
     width: 90px;
@@ -930,6 +945,10 @@ input[type="date"] {
   .hagmel-m-content2 {
     left: 10%;
   }
+  .home-secsix-cont h2,
+  .home-secsix-cont p {
+    z-index: 99;
+  }
 }
 
 /* Small Devices (Tablets) */
@@ -945,17 +964,96 @@ input[type="date"] {
     width: 80%;
     margin: auto;
   }
+  .home-all-gmenu ul {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+  }
+  .home-sectionsix {
+    width: 90%;
+    margin: auto;
+  }
+  .home-player {
+    width: 85%;
+  }
+  .home-secsix-cont h2,
+  .home-secsix-cont p {
+    z-index: 99;
+  }
+  .home-secsix-sub {
+    width: 90%;
+    height: 65px;
+    z-index: 9999;
+  }
+  .home-secsix-sub form {
+    top: 11%;
+  }
+  .home-secsix-sub p {
+    top: 10%;
+  }
+  .hsss-fot-leftimg {
+    display: none;
+  }
+  .hsss-fot-leftimg2 {
+    left: 2%;
+  }
+  .hsss-fot-rightimg{
+    right: -6%;
+  }
 }
 
 /* Medium Devices (Tablets in Landscape, Small Laptops) */
-@media (min-width: 769px) and (max-width: 992px) {
+@media (min-width: 769px) and (max-width: 1050px) {
+  .home-main {
+    width: 80%;
+  }
   .home-reminder-content {
     flex-wrap: wrap;
+  }
+.home-sectionfive {
+  width: 80%;
+}
+  .home-sectionsix {
+    width: 90%;
+  }
+  .home-player {
+    width: 80%;
+  }
+  .home-secsix-cont h2,
+  .home-secsix-cont p {
+    z-index: 99;
+  }
+  .home-player {
+    width: 85%;
+  }
+  .home-secsix-cont h2,
+  .home-secsix-cont p {
+    z-index: 99;
+  }
+  .home-secsix-sub {
+    width: 90%;
+    height: 65px;
+    z-index: 9999;
+  }
+  .home-secsix-sub form {
+    top: 11%;
+  }
+  .home-secsix-sub p {
+    top: 10%;
+  }
+  .hsss-fot-leftimg {
+    display: none;
+  }
+  .hsss-fot-leftimg2 {
+    left: 2%;
+  }
+  .hsss-fot-rightimg{
+    right: -6%;
   }
 }
 
 /* Large Devices (Desktops) */
-@media (min-width: 993px) and (max-width: 1200px) {
+@media (min-width: 1051px) and (max-width: 1200px) {
 }
 
 /* Extra Large Devices (Large Desktops) */
