--- a/client/src/app/components/css/sporttype.css
+++ b/client/src/app/components/css/sporttype.css
@@ -22,7 +22,8 @@
 }
 
 .hkik-oddline-each {
-  height: 180px;
+  height: auto;
+  margin-bottom: 4%;
 }
 
 .hkik-oddline-eheads {
@@ -63,9 +64,10 @@
   line-height: 19.2px;
 }
 .hkik-oddline-econts {
-  height: 120px;
+  height: auto;
   background-color: var(--side-bar-back);
   display: block;
+  padding: 18px 0px;
 }
 
 .hkik-oddline-econt {
