--- a/client/src/app/details/detailslayout.css
+++ b/client/src/app/details/detailslayout.css
@@ -26,7 +26,7 @@
   bottom: -5px;
   width: 100%;
   height: 3px;
-  background: linear-gradient(90deg, red, green, blue, orange, yellow);
+  background: linear-gradient(88.89deg, #aaff00 0%, #ffaa1d 100%);
 }
 
 /*  */
