--- a/client/src/app/referral/referral.css
+++ b/client/src/app/referral/referral.css
@@ -295,7 +295,7 @@
   }
   .kikx-reward-re-cont {
     display: flex;
-    gap: 30px ;
+    gap: 30px;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
@@ -304,13 +304,19 @@
     width: 250px;
     height: 160px;
   }
+  .kikx-remyb-each {
+    display: grid;
+    grid-template-columns: 30% 25% 30%;
+    justify-content: space-around;
+    height: 100%;
+  }
 }
 
 /* Small Devices (Tablets) */
 @media (min-width: 577px) and (max-width: 768px) {
   .kikx-reward-re-cont {
     display: flex;
-    gap: 30px ;
+    gap: 30px;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
@@ -318,6 +324,15 @@
   .kikx-reward-re-eachs {
     width: 250px;
     height: 170px;
+  }
+  .kikx-reward-re-each {
+    height: 100%;
+  }
+  .kikx-reward-reflink-cleft h2 {
+    line-height: 19px;
+  }
+  .kikx-reward-reflink-cleft p {
+    line-height: 19px;
   }
 }
 
