--- a/client/src/app/components/css/header.css
+++ b/client/src/app/components/css/header.css
@@ -70,7 +70,6 @@ header {
   flex-direction: row;
   gap: 1em;
   align-items: center;
-
 }
 
 .accessibility {
@@ -118,7 +117,6 @@ header {
 }
 
 .nav-buttons {
-
 }
 
 .nav-button {
@@ -131,7 +129,40 @@ header {
   font-weight: 500;
   line-height: 19px;
 }
+.nav-button.username {
+  cursor: pointer;
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
 
+.nav-profile {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+}
+.nav-profile span {
+  width: max-content;
+}
+
+.dropdown-menu.profiledropdown {
+  width: 200px;
+  color: black;
+  padding: 30px 20px;
+}
+
+.profile-d-menu {
+  margin-top: 8px;
+}
+
+.profile-d-menu a {
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+  align-items: center;
+}
 .login {
   border: 1px solid var(--side-bar-popup);
   background: #2c2852;
@@ -341,12 +372,13 @@ header {
 
 .dropdown-menu {
   position: absolute;
-  top: 100%;
-  right: 15px;
+  top: 110%;
+  right: 0px;
   background-color: white;
   border: 1px solid #ccc;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   z-index: 1000;
+  border: 4px;
 }
 
 .dropdown-item {
@@ -363,14 +395,16 @@ header {
 }
 .dropdown_item_logout {
   width: 100px;
-  color: #000;
-  background: #fff;
+  color: var(--white);
+  background: var(--side-bar-popup);
   padding: 5px 0 6px;
   text-align: center;
   font-family: "Roboto";
   font-size: 15px;
   font-weight: 500;
   transition: 0.3s;
+  border: 5px;
+  margin-top: 8px;
 }
 
 .dropdown_item_logout:hover {
